_docs/v0.63/configuring-metabase/config-template.md
---
version: v0.63
has_magic_breadcrumbs: true
show_category_breadcrumb: true
show_title_breadcrumb: true
category: 'Configuring Metabase'
title: 'Metabase config file template'
source_url: 'https://github.com/metabase/metabase/blob/master/docs/configuring-metabase/config-template.md'
layout: new-docs
---

# Metabase config file template

You can generate this doc page by changing into the top-level Metabase directory and running:

```
clojure -M:doc:ee config-template
```

The template lists example `database`, `user`, and `settings` sections for the [config file](./config-file).


```yaml
# A config file template for Metabase.
# You'll need to update (or remove) the `users` and `databases` sections.
# The settings in `settings` include default values. We recommend removing
# or commenting out settings that you don't set.
# To use an env var, you can use a template string: "{{ env YOUR_ENV_VAR }}"
# Note the quote marks wrapping the env var template.
# For more on the configuration file, see:
# https://www.metabase.com/docs/latest/configuring-metabase/config-file
# For more on what each setting does, check out:
# https://www.metabase.com/docs/latest/configuring-metabase/environment-variables
version: 1
config:
  users:
  - first_name: First
    last_name: Person
    password: metabot1
    email: first@example.com
  - first_name: Normal
    last_name: Person
    password: metabot1
    email: normal@example.com
  - first_name: Admin
    last_name: Person
    password: metabot1
    is_superuser: true
    email: admin@example.com
  databases:
  - name: Sample PostgreSQL
    engine: postgres
    details:
      host: postgres-data
      port: 5432
      user: metabase
      password: metasample123
      dbname: sample
  - name: Sample MySQL
    engine: mysql
    details:
      host: mysql-data
      port: 3306
      user: metabase
      password: metasample123
      dbname: sample
  api-keys:
  - name: Admin API key
    group: admin
    creator: first@example.com
    key: mb_firsttestapikey123
  - name: All Users API key
    group: all-users
    creator: first@example.com
    key: mb_secondtestapikey456
  settings:
    admin-email: null
    aggregated-query-row-limit: null
    ai-features-enabled: true
    allowed-iframe-hosts: |-
      youtube.com,
      youtu.be,
      loom.com,
      vimeo.com,
      docs.google.com,
      calendar.google.com,
      airtable.com,
      typeform.com,
      canva.com,
      codepen.io,
      figma.com,
      grafana.com,
      miro.com,
      excalidraw.com,
      notion.com,
      atlassian.com,
      trello.com,
      asana.com,
      gist.github.com,
      linkedin.com,
      twitter.com,
      x.com
    analytics-pii-retention-enabled: false
    anon-tracking-enabled: true
    api-key: null
    application-colors: {}
    application-favicon-url: app/assets/img/favicon.ico
    application-font: Lato
    application-font-files: null
    application-logo-url: app/assets/img/logo.svg
    application-name: Metabase
    attachment-row-limit: null
    attachment-table-row-limit: 20
    bcc-enabled: true
    breakout-bin-width: 10.0
    breakout-bins-num: 8
    check-for-updates: true
    config-from-file-sync-databases: true
    csp-img-allowed-hosts: ''
    csp-img-enabled: false
    csv-field-separator: ','
    custom-formatting: {}
    custom-geojson: null
    custom-geojson-enabled: true
    custom-homepage: false
    custom-homepage-dashboard: null
    custom-viz-enabled: false
    dashboards-save-last-used-parameters: true
    db-connection-timeout-ms: 10000
    db-query-timeout-minutes: 20
    default-maps-enabled: true
    disable-auto-sync: false
    disable-cors-on-localhost: false
    download-row-limit: null
    email-from-address: notifications@metabase.com
    email-from-address-override: notifications@metabase.com
    email-from-name: null
    email-max-recipients-per-message: 50
    email-max-recipients-per-second: null
    email-reply-to: null
    email-smtp-host: null
    email-smtp-host-override: null
    email-smtp-password: null
    email-smtp-password-override: null
    email-smtp-port: null
    email-smtp-port-override: null
    email-smtp-security: none
    email-smtp-security-override: ssl
    email-smtp-username: null
    email-smtp-username-override: null
    embedded-metabot-enabled: true
    embedding-app-origins-interactive: null
    embedding-app-origins-sdk: ''
    embedding-homepage: hidden
    embedding-secret-key: null
    enable-embedding-interactive: false
    enable-embedding-sdk: false
    enable-embedding-simple: false
    enable-embedding-static: false
    enable-password-login: true
    enable-pivoted-exports: true
    enable-public-sharing: true
    enable-xrays: true
    fingerprint-max-fields-per-table: 10000
    follow-up-email-sent: false
    google-auth-auto-create-accounts-domain: null
    google-auth-client-id: null
    google-auth-enabled: null
    gsheets: null
    health-check-logging-enabled: true
    help-link: metabase
    help-link-custom-destination: https://www.metabase.com/help/premium
    hide-stacktraces: false
    http-channel-host-strategy: external-only
    humanization-strategy: simple
    index-update-thread-count: 2
    jdbc-data-warehouse-connection-pool-checkout-timeout-ms: 0
    jdbc-data-warehouse-connection-pool-max-pending-checkouts: 0
    jdbc-data-warehouse-max-connection-pool-size: 15
    jdbc-network-timeout-ms: 1800000
    jwt-attribute-email: email
    jwt-attribute-firstname: first_name
    jwt-attribute-groups: groups
    jwt-attribute-lastname: last_name
    jwt-attribute-tenant: '@tenant'
    jwt-attribute-tenant-attributes: '@tenant.attributes'
    jwt-enabled: false
    jwt-group-mappings: {}
    jwt-group-sync: false
    jwt-identity-provider-uri: null
    jwt-shared-secret: null
    jwt-user-provisioning-enabled: true
    landing-page: ''
    landing-page-illustration: default
    landing-page-illustration-custom: null
    ldap-attribute-email: mail
    ldap-attribute-firstname: givenName
    ldap-attribute-lastname: sn
    ldap-bind-dn: null
    ldap-enabled: false
    ldap-group-base: null
    ldap-group-mappings: {}
    ldap-group-membership-filter: (member={dn})
    ldap-group-sync: false
    ldap-host: null
    ldap-password: null
    ldap-port: 389
    ldap-security: none
    ldap-sync-user-attributes: true
    ldap-sync-user-attributes-allowlist: ''
    ldap-sync-user-attributes-blacklist: userPassword,dn,distinguishedName
    ldap-timeout-seconds: 15.0
    ldap-trust-store: null
    ldap-user-base: null
    ldap-user-filter: (&(objectClass=inetOrgPerson)(|(uid={login})(mail={login})))
    ldap-user-provisioning-enabled: true
    license-token-missing-banner-dismissal-timestamp: []
    llm-anthropic-api-base-url: https://api.anthropic.com
    llm-anthropic-api-key: null
    llm-anthropic-model: claude-opus-4-5-20251101
    llm-azure-api-base-url: null
    llm-azure-api-key: null
    llm-bedrock-access-key-id: null
    llm-bedrock-region: us-east-1
    llm-bedrock-secret-access-key: null
    llm-bedrock-session-token: null
    llm-connection-timeout-ms: 5000
    llm-max-tokens: 4096
    llm-metabot-provider: anthropic/claude-sonnet-4-6
    llm-mistral-api-base-url: https://api.mistral.ai/v1
    llm-mistral-api-key: null
    llm-openai-api-base-url: https://api.openai.com
    llm-openai-api-key: null
    llm-openai-model: gpt-5.4
    llm-openrouter-api-base-url: https://openrouter.ai/api
    llm-openrouter-api-key: null
    llm-rate-limit-per-ip: 100
    llm-rate-limit-per-user: 20
    llm-request-timeout-ms: 60000
    llm-zai-api-base-url: https://api.z.ai/api/paas/v4
    llm-zai-api-key: null
    loading-message: doing-science
    login-page-illustration: default
    login-page-illustration-custom: null
    map-tile-server-url: https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png
    mcp-apps-cors-custom-origins: ''
    mcp-apps-cors-enabled-clients: []
    metabot-advanced-permissions: false
    metabot-chat-system-prompt: ''
    metabot-enabled: true
    metabot-icon: metabot
    metabot-limit-reset-rate: monthly
    metabot-limit-unit: tokens
    metabot-name: Metabot
    metabot-nlq-system-prompt: ''
    metabot-quota-reached-message: You have reached your AI usage limit for the current period. Please contact your administrator.
    metabot-recent-views-enabled: true
    metabot-show-illustrations: true
    metabot-slack-signing-secret: null
    metabot-sql-system-prompt: ''
    mfa-challenge-signing-key: null
    mfa-enforcement: 'off'
    native-query-autocomplete-match-style: substring
    nested-field-columns-value-length-limit: 50000
    no-data-illustration: default
    no-data-illustration-custom: null
    no-object-illustration: default
    no-object-illustration-custom: null
    non-table-chart-generated: false
    not-behind-proxy: false
    notification-link-base-url: null
    notification-system-event-thread-pool-size: 5
    notification-thread-pool-size: 3
    oidc-allowed-networks: allow-all
    oidc-providers: []
    oidc-user-provisioning-enabled: true
    persisted-model-refresh-cron-schedule: 0 0 0/6 * * ? *
    persisted-models-enabled: false
    premium-embedding-token: null
    query-caching-early-refresh-ratio: 0.1
    query-caching-max-kb: 2000
    query-caching-max-ttl: 3024000.0
    redirect-all-requests-to-https: false
    remote-sync-auto-import: false
    remote-sync-auto-import-rate: 5
    remote-sync-branch: null
    remote-sync-check-changes-cache-ttl-seconds: 60
    remote-sync-git-timeout-seconds: 60
    remote-sync-task-time-limit-ms: 300000
    remote-sync-token: null
    remote-sync-transforms: false
    remote-sync-type: read-only
    remote-sync-url: null
    report-timezone: null
    reset-token-ttl-hours: 48
    retry-initial-interval: 500
    retry-jitter-factor: 0.1
    retry-max-interval-millis: 30000
    retry-max-retries: 6
    retry-multiplier: 2.0
    saml-application-name: Metabase
    saml-attribute-email: null
    saml-attribute-firstname: http://schemas.xmlsoap.org/ws/2005/05/identity/claims/givenname
    saml-attribute-group: null
    saml-attribute-lastname: http://schemas.xmlsoap.org/ws/2005/05/identity/claims/surname
    saml-attribute-tenant: null
    saml-enabled: false
    saml-group-mappings: {}
    saml-group-sync: false
    saml-identity-provider-certificate: null
    saml-identity-provider-issuer: null
    saml-identity-provider-slo-uri: null
    saml-identity-provider-uri: null
    saml-keystore-alias: null
    saml-keystore-password: changeit
    saml-keystore-path: null
    saml-slo-enabled: false
    saml-user-provisioning-enabled: true
    scan-max-fields-per-table: 10000
    scim-enabled: null
    sdk-encryption-validation-key: null
    search-language: null
    search-typeahead-enabled: true
    send-new-sso-user-admin-email: null
    session-cookie-samesite: lax
    session-cookies: null
    session-timeout: null
    setup-embedding-autoenabled: false
    setup-license-active-at-setup: false
    show-database-syncing-modal: null
    show-homepage-data: true
    show-homepage-xrays: true
    show-metabase-links: true
    show-static-embed-terms: true
    site-locale: en
    site-name: Metabase
    site-url: null
    slack-app-token: null
    slack-bug-report-channel: metabase-bugs
    slack-connect-attribute-team-id: https://slack.com/team_id
    slack-connect-authentication-mode: link-only
    slack-connect-client-id: null
    slack-connect-client-secret: null
    slack-connect-enabled: false
    slack-connect-signing-secret-version: 0
    slack-connect-user-provisioning-enabled: true
    smtp-override-enabled: false
    source-address-header: X-Forwarded-For
    sql-jdbc-fetch-size: 500
    sql-tools-parser-backend: sqlglot
    ssh-heartbeat-interval-sec: 180
    start-of-week: sunday
    subscription-allowed-domains: null
    surveys-enabled: true
    sync-leaf-fields-limit: 1000
    sync-max-fields-per-table: 10000
    synchronous-batch-updates: false
    thread-interrupt-escalation-timeout-ms: 0
    transform-run-job-sql-concurrency: 3
    transform-timeout: 240
    transforms-enabled: false
    unaggregated-query-row-limit: null
    uploads-settings: null
    usage-metadata-enabled: false
    usage-metadata-last-completed-day: null
    usage-metadata-retention-days: 90
    usage-metadata-schedule: 0 0 2 * * ? *
    user-visibility: all
    warehouse-allowed-networks: null
```
